# chip8

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  display.h  emu.h
src/: chip8.cpp  display.cpp  emu.cpp
test/: test_emu.cpp
